# SciBot

./: chatbot.py  config.yaml  main.py  pyproject.toml  qamodel.py  qatest.py  readme.md
datastore/: state.json
gui/: chatbot.py
gui/templates/: index.html
templates/: index.html
