[tool.poetry]
name = "scibot"
version = "1.1"
description = "cognitive-assistant"
authors = ["Thushara"]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia-api = "^0.6.0"
sentence-transformers = "^2.2.2"
transformers = "^4.36.2"
yake = "^0.4.8"
flask = "^2.3.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
